--- a/app/sonar-project.properties
+++ b/app/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=gfujii-cmd_lab-cicd
 sonar.organization=gfujii-cmd
 
 # This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=<NOME DO PROJETO - Nome do repo> 
+sonar.projectName=lab-cicd
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
